syntax = "proto3";

option csharp_namespace = "TI5yncronizer.Core";

package file_listener;

service FileListener {
  rpc AddListener (AddListenerRequest) returns (AddListenerReply);
  rpc RemoveListener (RemoveListenerRequest) returns (RemoveListenerReply);
  rpc ListListeners (ListListenersRequest) returns (ListListenersReply);
  rpc ListPendingFilesToSync (ListPendingFilesToSyncRequest) returns (ListPendingFilesToSyncReply);
  rpc FileSynchronized (FileSynchronizedRequest) returns (FileSynchronizedReply);
}

message AddListenerRequest {
    string local_path = 1;
    string server_path = 2;
    string device_identifier = 3;
}
message AddListenerReply {
    int32 id = 1;
    int32 status = 2;
}


message RemoveListenerRequest {
    int32 id = 1;
}
message RemoveListenerReply {
    int32 status = 1;
}


message ListListenersRequest {
    string device_identifier = 1;
    string updated_after = 2;
}
message ListListenersObject {
    string local_path = 1;
    string server_path = 2;
    bool is_active = 3;
}
message ListListenersReply {
    repeated ListListenersObject listeners = 1;
}


message ListPendingFilesToSyncRequest {
    string device_identifier = 1;
}
message ListPendingFilesToSyncObject {
    int32 id = 1;
    string local_path = 2;
    string server_path = 3;
    string old_server_path = 4;
    int32 enum_action = 5;
    int64 last_write_utc_as_ticks = 6;
}
message ListPendingFilesToSyncReply {
    repeated ListPendingFilesToSyncObject files = 1;
}


message FileSynchronizedRequest {
    int32 id = 1;
    string device_identifier = 2;
}
message FileSynchronizedReply {
}
